created own component for ContactForm, wired stuff up in front end. Also created server folder & installed express & nodemailer.

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -69,7 +69,7 @@
     "1": "Email*"
   },
   "contactMessage": {
-    "1": "Message"
+    "1": "Message*"
   },
   "contactSendMessage": {
     "1": "Send Message"
