--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -69,7 +69,7 @@
     "1": "Email*"
   },
   "contactMessage": {
-    "1": "Mensaje"
+    "1": "Mensaje*"
   },
   "contactSendMessage": {
     "1": "Enviar Mensaje"
