fixed a little styling for CONTACT US header, also updated texts.

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -9,16 +9,16 @@
     "1": "Custom Solutions and Value for the Long Term"
   },
   "aboutParagraph1": {
-    "1": "Those who know us, describe our company as: international sales experience and positive relationships."
+    "1": "Terranova Sales is an established Manufacturers’ Representative agency based in Vancouver BC, Canada. We represent leading companies in the food industry from Canada, the U.S. and Mexico. "
   },
   "aboutParagraph2": {
-    "1": "We have been in business since 2013, and our team has more than 25 years of experience in Business to Business sales in Canada, the U.S. and Mexico."
+    "1": "For over 15 years we have been servicing companies such as produce growers and shippers, commercial bakeries, wholesale packaging distributors and wholesale foodservice distributors."
   },
   "aboutParagraph3": {
-    "1": "Our specialty is turning business opportunities into business relationships, with a long-term vision."
+    "1": "Our focus is solutions-based and customized supply programs. Our specialty is turning business opportunities into business relationships, with a long-term vision."
   },
   "productsSubtitle": {
-    "1": "We proudly represent companies in the food industry, each one a leader in its sector"
+    "1": "We proudly represent leading companies in the food industry"
   },
   "productsDescription1": {
     "1": "Customized packaging for produce, bakery and processed foods"
@@ -30,13 +30,13 @@
     "1": "Frozen avocado products for foodservice and retail"
   },
   "productsDescription4": {
-    "1": "Canned vegetables for foodservice"
+    "1": "Canned specialties for foodservice"
   },
   "servicesTitle": {
     "1": "Services"
   },
   "servicesSubtitle": {
-    "1": "Custom made"
+    "1": "We work together; from opportunities to door-to-door shipments"
   },
   "servicesParagraph": {
     "1": "Our specialty is working together to find opportunities and provide solutions to meet or exceed customer expectations."
