--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -9,16 +9,16 @@
     "1": "Soluciones a la Medida y Valor para el Largo Plazo"
   },
   "aboutParagraph1": {
-    "1": "Quienes nos conocen, describen nuestra empresa como: experiencia en ventas internacionales y relaciones personales positivas."
+    "1": "Terranova Sales es una agencia Representante de Empresas localizada en Vancouver, BC, Canadá. Representamos empresas líderes en la industria de los alimentos de Canadá, EUA y México. "
   },
   "aboutParagraph2": {
-    "1": "Hemos estado operando desde el 2013, y nuestro equipo tiene más de 25 años de experiencia en ventas a nivel comercial e industrial en Canadá, los Estados Unidos y México."
+    "1": "Contamos con más de 15 años trabajando con clientes como productores y distribuidores de hortalizas y frutas frescas, fábricas de pasteles y repostería, distribuidores de empaques y de alimentos para foodservice. "
   },
   "aboutParagraph3": {
-    "1": "Nuestra especialidad es convertir oportunidades comerciales en relaciones de negocio, con visión de largo plazo."
+    "1": "Nuestro enfoque es en programas de abastecimiento hechos a la medida de cada cliente. Nuestra especialidad es convertir oportunidades comerciales en relaciones de negocio, con visión de largo plazo."
   },
   "productsSubtitle": {
-    "1": "Orgullosamente representamos a empresas en la industria de los alimentos, cada una un líder en su sector"
+    "1": "Orgullosamente representamos a empresas líderes en la industria de los alimentos"
   },
   "productsDescription1": {
     "1": "Empaques hechos a la medida para frutas y hortalizas, pastelería, repostería y alimentos procesados"
@@ -30,13 +30,13 @@
     "1": "Productos de aguacate congelados en presentaciones institucional y menudeo"
   },
   "productsDescription4": {
-    "1": "Vegetales enlatados en presentación institucional"
+    "1": "Especialidades enlatadas en presentación institucional"
   },
   "servicesTitle": {
     "1": "Nuestros servicios"
   },
   "servicesSubtitle": {
-    "1": "Hechos a la medida"
+    "1": "Trabajamos juntos; desde oportunidades hasta embarques puerta-a-puerta"
   },
   "servicesParagraph": {
     "1": "Nuestra especialidad es trabajar juntos para encontrar oportunidades y dar soluciones para cumplir o superar expectativas del cliente."
@@ -69,7 +69,7 @@
     "1": "Nombre*"
   },
   "contactEmail": {
-    "1": "Email*"
+    "1": "Correo electrónico*"
   },
   "contactMessage": {
     "1": "Mensaje*"
