Added youtube video player mobile &  desktop

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -17,6 +17,9 @@
   "aboutParagraph3": {
     "1": "Our focus is solutions-based and customized supply programs. Our specialty is turning business opportunities into business relationships, with a long-term vision."
   },
+  "aboutVideo": {
+    "1": "https://www.youtube.com/embed/tmtDyTMF1Y0"
+  },
   "productsSubtitle": {
     "1": "We proudly represent leading companies in the food industry"
   },
