--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -17,6 +17,9 @@
   "aboutParagraph3": {
     "1": "Nuestro enfoque es en programas de abastecimiento hechos a la medida de cada cliente. Nuestra especialidad es convertir oportunidades comerciales en relaciones de negocio, con visión de largo plazo."
   },
+  "aboutVideo": {
+    "1": "https://www.youtube.com/embed/2nHMyKiSBP8"
+  },
   "productsSubtitle": {
     "1": "Orgullosamente representamos a empresas líderes en la industria de los alimentos"
   },
