updated copy of title, about us and products

--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
   "heroHeader": {
-    "1": "Representante de empresas"
+    "1": "Agente Comercial en Empaques y Alimentos"
   },
   "aboutTitle": {
     "1": "Acerca de nosotros"
@@ -9,19 +9,19 @@
     "1": "Soluciones a la Medida y Valor para el Largo Plazo"
   },
   "aboutParagraph1": {
-    "1": "Terranova Sales es una agencia Representante de Empresas localizada en Vancouver, BC, Canadá. Representamos empresas líderes en la industria de los alimentos de Canadá, EUA y México. "
+    "1": "Terranova Sales es una reconocida agencia comercial localizada en Vancouver, BC, Canadá, con más de 15 años trabajando con clientes como productores y distribuidores de hortalizas y frutas frescas, fábricas de pasteles y repostería, distribuidores de empaques, y de alimentos para foodservice."
   },
   "aboutParagraph2": {
-    "1": "Contamos con más de 15 años trabajando con clientes como productores y distribuidores de hortalizas y frutas frescas, fábricas de pasteles y repostería, distribuidores de empaques y de alimentos para foodservice. "
+    "1": "Representamos empresas líderes en la industria de los alimentos de Canadá, EUA y México. Nuestro enfoque es en programas de abastecimiento hechos a la medida de cada cliente. Nuestra especialidad es convertir oportunidades comerciales en relaciones de negocio."
   },
   "aboutParagraph3": {
-    "1": "Nuestro enfoque es en programas de abastecimiento hechos a la medida de cada cliente. Nuestra especialidad es convertir oportunidades comerciales en relaciones de negocio, con visión de largo plazo."
+    "1": ""
   },
   "aboutVideo": {
     "1": "https://www.youtube.com/embed/2nHMyKiSBP8"
   },
   "productsSubtitle": {
-    "1": "Orgullosamente representamos a empresas líderes en la industria de los alimentos"
+    "1": "Orgullosamente trabajamos con empresas líderes en la industria de los alimentos"
   },
   "productsDescription1": {
     "1": "Empaques hechos a la medida para frutas y hortalizas, pastelería, repostería y alimentos procesados"
