--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "heroHeader": {
-    "1": "Manufacturers' Representative"
+    "1": "Packaging and Food Broker"
   },
   "aboutTitle": {
     "1": "About Us"
@@ -9,19 +9,19 @@
     "1": "Custom Solutions and Value for the Long Term"
   },
   "aboutParagraph1": {
-    "1": "Terranova Sales is an established Manufacturers’ Representative agency based in Vancouver BC, Canada. We represent leading companies in the food industry from Canada, the U.S. and Mexico. "
+    "1": "Terranova Sales is an established firm based in Vancouver BC, Canada, with over 15 years serving companies such as produce growers and shippers, commercial bakeries, wholesale packaging distributors, and wholesale foodservice distributors."
   },
   "aboutParagraph2": {
-    "1": "For over 15 years we have been servicing companies such as produce growers and shippers, commercial bakeries, wholesale packaging distributors and wholesale foodservice distributors."
+    "1": "We work with leading companies in the food industry from Canada, the U.S. and Mexico. Our focus is solutions-based and customized supply programs. Our specialty is turning business opportunities into business relationships."
   },
   "aboutParagraph3": {
-    "1": "Our focus is solutions-based and customized supply programs. Our specialty is turning business opportunities into business relationships, with a long-term vision."
+    "1": ""
   },
   "aboutVideo": {
     "1": "https://www.youtube.com/embed/tmtDyTMF1Y0"
   },
   "productsSubtitle": {
-    "1": "We proudly represent leading companies in the food industry"
+    "1": "We proudly work with leading companies in the food industry"
   },
   "productsDescription1": {
     "1": "Customized packaging for produce, bakery and processed foods"
