Replaced some texts in EN and ES texts

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "heroHeader": {
-    "1": "Packaging and Food Broker"
+    "1": "Supplier and Broker for the Food Industry"
   },
   "aboutTitle": {
     "1": "About Us"
@@ -21,7 +21,7 @@
     "1": "https://www.youtube.com/embed/tmtDyTMF1Y0"
   },
   "productsSubtitle": {
-    "1": "We proudly work with leading companies in the food industry"
+    "1": "We offer products from leading suppliers"
   },
   "productsDescription1": {
     "1": "Customized packaging for produce, bakery and processed foods"
@@ -39,7 +39,7 @@
     "1": "Services"
   },
   "servicesSubtitle": {
-    "1": "We work together; from opportunities to door-to-door shipments"
+    "1": "We provide custom solutions."
   },
   "servicesParagraph": {
     "1": "Our specialty is working together to find opportunities and provide solutions to meet or exceed customer expectations."
