--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
   "heroHeader": {
-    "1": "Agente Comercial en Empaques y Alimentos"
+    "1": "Proveedor para la industria de alimentos"
   },
   "aboutTitle": {
     "1": "Acerca de nosotros"
@@ -21,7 +21,7 @@
     "1": "https://www.youtube.com/embed/2nHMyKiSBP8"
   },
   "productsSubtitle": {
-    "1": "Orgullosamente trabajamos con empresas líderes en la industria de los alimentos"
+    "1": "Ofrecemos productos de empresas líderes"
   },
   "productsDescription1": {
     "1": "Empaques hechos a la medida para frutas y hortalizas, pastelería, repostería y alimentos procesados"
@@ -39,7 +39,7 @@
     "1": "Nuestros servicios"
   },
   "servicesSubtitle": {
-    "1": "Trabajamos juntos; desde oportunidades hasta embarques puerta-a-puerta"
+    "1": "Proveemos soluciones a la medida"
   },
   "servicesParagraph": {
     "1": "Nuestra especialidad es trabajar juntos para encontrar oportunidades y dar soluciones para cumplir o superar expectativas del cliente."
