Almost done with carousel improvements

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -35,6 +35,9 @@
   "productsDescription4": {
     "1": "Canned specialties for foodservice"
   },
+  "productsDescription5": {
+    "1": "Fresh produce labeling machines and labels"
+  },
   "servicesTitle": {
     "1": "Services"
   },
