--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -35,6 +35,9 @@
   "productsDescription4": {
     "1": "Especialidades enlatadas en presentación institucional"
   },
+  "productsDescription5": {
+    "1": "Etiquetas y etiquetadoras para frutas y verduras"
+  },
   "servicesTitle": {
     "1": "Nuestros servicios"
   },
