Corrected Spanish translation

--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -60,10 +60,10 @@
     "1": "Prospectación"
   },
   "servicesCardTitle2": {
-    "1": "Ventas dedicadas"
+    "1": "Labor de ventas"
   },
   "servicesCardTitle3": {
-    "1": "Logistics"
+    "1": "Logistica"
   },
   "servicesCardSubtitle1": {
     "1": "Identificamos y contactamos directamente a clientes potenciales."
