Spelling mistakes fix

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -9,7 +9,7 @@
     "1": "We take your products to new markets"
   },
   "aboutParagraph1": {
-    "1": "Our goal is to find opportiunities for long term business, relationships or spot operations."
+    "1": "Our goal is to find opportunities for long term business relationships or spot operations."
   },
   "aboutParagraph2": {
     "1": "Terranova Sales is an established firm based in Vancouver BC, Canada, with almost 20 years bringing people and companies together for the benefit of owners, shareholders, and consumers in Canada, the United States, Mexico and Australia."
