--- a/client/public/locales/es/translation.json
+++ b/client/public/locales/es/translation.json
@@ -63,7 +63,7 @@
     "1": "Labor de ventas"
   },
   "servicesCardTitle3": {
-    "1": "Logistica"
+    "1": "Logística"
   },
   "servicesCardSubtitle1": {
     "1": "Identificamos y contactamos directamente a clientes potenciales."
@@ -72,7 +72,7 @@
     "1": "Actuamos como una extensión de tu equipo de ventas."
   },
   "servicesCardSubtitle3": {
-    "1": "Podemos ayudar a llevar tus productos hasta las puertas de tus clientes con nuestro apoyo en aduana y fletes."
+    "1": "Podemos ayudar a llevar tus productos hasta las puertas de tus clientes con nuestro apoyo en aduana y fletes."
   },
   "contactTitle": {
     "1": "Contáctanos"
